Nice, working context menu, working variable creation and movement, added some proof steps, fixed some tree bugs, commented tree.js, shifted main plane into one from initial proof node

--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ body {
 	border: solid 1px #333;
 	width: 100%;
 	height: 100%;
+	overflow: hidden;
 }
 p {
 	text-align: center;
@@ -139,10 +140,11 @@ p {
 
 svg:not(:root) 
 { 
-	width: 100%;
+	/*width: 100%;
+	height: 100%;*/
 	
 	z-index: 1;
-	height: 95%;
+	overflow: hidden;
 }
 
 header
@@ -223,23 +225,23 @@ header
 	z-index: 30;
 }
 
-	#menu div a
-	{	position: relative;
-		display: block;
-		margin: 0;
-		padding: 5px 10px;
-		width: auto;
-		white-space: nowrap;
-		text-align: left;
-		text-decoration: none;
-		background: #EAEBD8;
-		color: #2875DE;
-		font: 11px arial;
-		z-index: 30;
-	}
+#menu div a
+{	position: relative;
+	display: block;
+	margin: 0;
+	padding: 5px 10px;
+	width: auto;
+	white-space: nowrap;
+	text-align: left;
+	text-decoration: none;
+	background: #EAEBD8;
+	color: #2875DE;
+	font: 11px arial;
+	z-index: 30;
+}
 
-	#menu div a:hover
-	{	background: #49A3FF;
-		color: #FFF;
-		z-index: 30;
-	}
+#menu div a:hover
+{	background: #49A3FF;
+	color: #FFF;
+	z-index: 30;
+}
